[gd_scene load_steps=19 format=4 uid="uid://ds71pq7djg3au"]

[ext_resource type="Texture2D" uid="uid://cni2isbjoq12d" path="res://sprites/Tileset.png" id="1_68nli"]
[ext_resource type="Script" uid="uid://biuglrq61o7b8" path="res://scripts/managers/room managers/room.gd" id="1_ffxv4"]
[ext_resource type="Script" uid="uid://tjkpct3ux3nu" path="res://scripts/managers/room managers/exit_door.gd" id="3_14vil"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q4pf7"]
texture = ExtResource("1_68nli")
0:0/0 = 0
0:0/0/probability = 0.95
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:1/0/probability = 0.02
4:1/0 = 0
4:1/0/probability = 0.02
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
3:2/0/probability = 0.1
4:2/0 = 0
4:2/0/probability = 0.02
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
9:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
16:11/0 = 0
18:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
24:11/0 = 0
25:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0

[sub_resource type="TileSet" id="TileSet_1m6c1"]
sources/0 = SubResource("TileSetAtlasSource_q4pf7")

[sub_resource type="AtlasTexture" id="AtlasTexture_36trf"]
atlas = ExtResource("1_68nli")
region = Rect2(8, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffxv4"]
atlas = ExtResource("1_68nli")
region = Rect2(8, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_85yof"]
atlas = ExtResource("1_68nli")
region = Rect2(40, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_14vil"]
atlas = ExtResource("1_68nli")
region = Rect2(0, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxe34"]
atlas = ExtResource("1_68nli")
region = Rect2(40, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn645"]
atlas = ExtResource("1_68nli")
region = Rect2(0, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvc4m"]
atlas = ExtResource("1_68nli")
region = Rect2(0, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dqbv"]
atlas = ExtResource("1_68nli")
region = Rect2(40, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybpoa"]
atlas = ExtResource("1_68nli")
region = Rect2(76, 32, 4, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ffxv4"]
size = Vector2(39.9994, 46.0001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14vil"]
size = Vector2(40.5, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85yof"]
size = Vector2(43.0001, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36trf"]
size = Vector2(39.5, 40.0001)

[node name="Room" type="Node2D"]
script = ExtResource("1_ffxv4")

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["TileMap"]]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAADAAEAAAADAAIAAAADAAIAAAAAAAAAAAADAAMAAAADAAEAAAAEAAEAAAADAAIAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAACAAQAAAADAAIAAAACAAUAAAADAAIAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAEAAIAAAACAAoAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAADAAIAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAADAAIAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAEAAEAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAADAAIAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAADAAIAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAEAAEAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAADAAIAAAAIAAoAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAADAAIAAAAJAAYAAAAAAAAAAAAJAAcAAAADAAEAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAADAAIAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAEAAIAAAAKAAoAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAEAAEAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAADAAIAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAADAAIAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAEAAIAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_1m6c1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 96.0
offset_top = -40.0
offset_right = 624.0
mouse_filter = 2
texture = SubResource("AtlasTexture_36trf")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 96.0
offset_top = 528.0
offset_right = 624.0
offset_bottom = 568.0
mouse_filter = 2
texture = SubResource("AtlasTexture_ffxv4")
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 624.0
offset_right = 664.0
offset_bottom = 528.0
mouse_filter = 2
texture = SubResource("AtlasTexture_85yof")
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" type="TextureRect" parent="."]
offset_left = 56.0
offset_right = 96.0
offset_bottom = 528.0
mouse_filter = 2
texture = SubResource("AtlasTexture_14vil")
metadata/_edit_use_anchors_ = true

[node name="TextureRect5" type="TextureRect" parent="."]
offset_left = 624.0
offset_top = 528.0
offset_right = 664.0
offset_bottom = 568.0
mouse_filter = 2
texture = SubResource("AtlasTexture_jxe34")
metadata/_edit_use_anchors_ = true

[node name="TextureRect6" type="TextureRect" parent="."]
offset_left = 56.0
offset_top = 528.0
offset_right = 96.0
offset_bottom = 568.0
mouse_filter = 2
texture = SubResource("AtlasTexture_jn645")
metadata/_edit_use_anchors_ = true

[node name="TextureRect7" type="TextureRect" parent="."]
offset_left = 56.0
offset_top = -40.0
offset_right = 96.0
mouse_filter = 2
texture = SubResource("AtlasTexture_qvc4m")
metadata/_edit_use_anchors_ = true

[node name="TextureRect8" type="TextureRect" parent="."]
offset_left = 624.0
offset_top = -40.0
offset_right = 664.0
mouse_filter = 2
texture = SubResource("AtlasTexture_7dqbv")
metadata/_edit_use_anchors_ = true

[node name="ExitDoors" type="Node2D" parent="."]

[node name="DownDoor" type="Node2D" parent="ExitDoors"]
script = ExtResource("3_14vil")

[node name="Texture" type="TextureRect" parent="ExitDoors/DownDoor"]
offset_left = 383.0
offset_top = 528.0
offset_right = 403.0
offset_bottom = 574.0
rotation = 1.5708
mouse_filter = 2
texture = SubResource("AtlasTexture_ybpoa")
metadata/_edit_use_anchors_ = true

[node name="button" type="TextureRect" parent="ExitDoors/DownDoor"]
offset_left = 337.0
offset_top = 528.0
offset_right = 1137.0
offset_bottom = 1369.0
scale = Vector2(0.057546, 0.0475623)
expand_mode = 3

[node name="DownDoor" type="Area2D" parent="ExitDoors/DownDoor/button"]
position = Vector2(-5578.15, -5045.97)
scale = Vector2(17.3774, 21.0251)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoors/DownDoor/button/DownDoor"]
position = Vector2(344, 259.998)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ffxv4")

[node name="UpDoor" type="Node2D" parent="ExitDoors"]
script = ExtResource("3_14vil")

[node name="Texture" type="TextureRect" parent="ExitDoors/UpDoor"]
offset_left = 338.0
offset_right = 358.0
offset_bottom = 46.0
rotation = -1.5708
mouse_filter = 2
texture = SubResource("AtlasTexture_ybpoa")
metadata/_edit_use_anchors_ = true

[node name="button" type="TextureRect" parent="ExitDoors/UpDoor"]
offset_left = 338.0
offset_top = -40.0
offset_right = 1138.0
offset_bottom = 760.0
scale = Vector2(0.0573872, 0.0499692)
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="UpDoor" type="Area2D" parent="ExitDoors/UpDoor/button"]
position = Vector2(4356.35, -5723.54)
rotation = -1.5708
scale = Vector2(20.0123, 17.4255)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoors/UpDoor/button/UpDoor"]
position = Vector2(-306.25, -226.5)
shape = SubResource("RectangleShape2D_14vil")

[node name="LeftDoor" type="Node2D" parent="ExitDoors"]
script = ExtResource("3_14vil")

[node name="Texture" type="TextureRect" parent="ExitDoors/LeftDoor"]
offset_left = 96.0
offset_top = 286.0
offset_right = 116.0
offset_bottom = 332.0
rotation = 3.14159
mouse_filter = 2
texture = SubResource("AtlasTexture_ybpoa")
metadata/_edit_use_anchors_ = true

[node name="button" type="TextureRect" parent="ExitDoors/LeftDoor"]
offset_left = 56.0
offset_top = 241.0
offset_right = 856.0
offset_bottom = 1041.0
scale = Vector2(0.0566592, 0.0541017)
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="LeftDoor" type="Area2D" parent="ExitDoors/LeftDoor/button"]
position = Vector2(-776.635, -10498.7)
rotation = -1.5708
scale = Vector2(18.4837, 17.6494)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoors/LeftDoor/button/LeftDoor"]
position = Vector2(-589, 65.4984)
shape = SubResource("RectangleShape2D_85yof")

[node name="RightDoor" type="Node2D" parent="ExitDoors"]
script = ExtResource("3_14vil")

[node name="Texture" type="TextureRect" parent="ExitDoors/RightDoor"]
offset_left = 624.0
offset_top = 241.0
offset_right = 644.0
offset_bottom = 287.0
mouse_filter = 2
texture = SubResource("AtlasTexture_ybpoa")
metadata/_edit_use_anchors_ = true

[node name="button" type="TextureRect" parent="ExitDoors/RightDoor"]
offset_left = 619.0
offset_top = 244.0
offset_right = 1419.0
offset_bottom = 1044.0
scale = Vector2(0.0573871, 0.0498282)
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="RightDoor" type="Area2D" parent="ExitDoors/RightDoor/button"]
position = Vector2(0.00244141, 802.758)
rotation = -1.5708
scale = Vector2(20.069, 17.4255)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoors/RightDoor/button/RightDoor"]
position = Vector2(19.7501, 24.9999)
shape = SubResource("RectangleShape2D_36trf")

[connection signal="input_event" from="ExitDoors/DownDoor/button/DownDoor" to="." method="_on_down_door_input_event"]
[connection signal="input_event" from="ExitDoors/UpDoor/button/UpDoor" to="." method="_on_up_door_input_event"]
[connection signal="input_event" from="ExitDoors/LeftDoor/button/LeftDoor" to="." method="_on_left_door_input_event"]
[connection signal="input_event" from="ExitDoors/RightDoor/button/RightDoor" to="." method="_on_right_door_input_event"]
